# ctf-pcap-generator

./: .dockerignore  .env.example  .gitignore  .lychee.toml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  gunicorn.conf.py  pyproject.toml
.github/workflows/: docs.yml
ctf_pcaps/: __init__.py  config.py  logging.py
ctf_pcaps/engine/: __init__.py  cleanup.py  difficulty.py  export.py  flag.py  hints.py  loader.py  models.py  pipeline.py  preview.py  registry.py  writer.py  writeup.py
ctf_pcaps/integration/: __init__.py  ctfd_client.py  persistence.py
ctf_pcaps/web/: __init__.py  routes.py
docs/: configuration.md  ctfd-integration.md  deployment.md  for-professors.md  scenarios.md
scenarios/: arp_spoofing.yaml  brute_force.yaml  dir_traversal.yaml  dns_tunnel.yaml  http_beacon.yaml  icmp_exfil.yaml  reverse_shell.yaml  simple_dns.yaml  simple_tcp.yaml  sqli.yaml  syn_scan.yaml  xss_reflected.yaml
scenarios/shared/: tcp_defaults.yaml
scripts/: prepare-release.sh  verify-docs.sh
tests/: conftest.py
tests/engine/: test_builders.py  test_cleanup.py  test_difficulty.py  test_end_to_end.py  test_ethernet.py  test_export.py  test_flag.py  test_hints.py  test_http_session.py  test_loader.py  test_models.py  test_noise.py  test_pipeline.py  test_preview.py  test_protocols.py  test_registry.py  test_scapy_smoke.py  test_writer.py  test_writeup.py
tests/integration/: test_ctfd_client.py  test_persistence.py
tests/web/: test_routes.py
wiki/: Home.md  _Sidebar.md
(+43 files in other folders)
